--- a/index.html
+++ b/index.html
@@ -50,42 +50,42 @@
             </div>
             
             <ul class="metismenu mm-show" id="menu">
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <li class="mm-active">
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="file:///C:/Users/CARLTEC/Desktop/work/hajji/dd/pages/enrollments.html" class="" aria-expanded="true">
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <div class="parent-icon">
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <i class="bx bx-menu" style="color:white;"></i>
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </div>
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <div class="menu-title" style="color:white;">Enrollments</div>
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </a>
+        <li class="mm-active">
+          <a href="./enrollments.html" class="" aria-expanded="true">
+            <div class="parent-icon">
+              <i class="bx bx-menu" style="color:white;"></i>
+            </div>
+            <div class="menu-title" style="color:white;">Enrollments</div>
+          </a>
 
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </li>
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <li>
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="file:///C:/Users/CARLTEC/Desktop/work/hajji/dd/pages/results.html" class="">
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <div class="parent-icon">
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <i class="bx bx-map-alt" style="color:white;"></i>
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </div>
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <div class="menu-title" style="color:white;">Results</div>
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </a>
+        </li>
+        <li>
+          <a href="./results.html" class="">
+            <div class="parent-icon">
+              <i class="bx bx-map-alt" style="color:white;"></i>
+            </div>
+            <div class="menu-title" style="color:white;">Results</div>
+          </a>
 
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </li>
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <li>
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="file:///C:/Users/CARLTEC/Desktop/work/hajji/dd/pages/fees.html" class="">
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <div class="parent-icon">
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <i class="bx bx-wallet" style="color:white;"></i>
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </div>
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <div class="menu-title" style="color:white;">Fees</div>
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </a>
+        </li>
+        <li>
+          <a href="./fees.html" class="">
+            <div class="parent-icon">
+              <i class="bx bx-wallet" style="color:white;"></i>
+            </div>
+            <div class="menu-title" style="color:white;">Fees</div>
+          </a>
 
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </li>
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <li>
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="file:///C:/Users/CARLTEC/Desktop/work/hajji/dd/pages/my_profile.html" class="">
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <div class="parent-icon">
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <i class="bx bx-user-circle" style="color:white;"></i>
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </div>
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <div class="menu-title" style="color:white;">My Profile</div>
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </a>
+        </li>
+        <li>
+          <a href="./my_profile.html" class="">
+            <div class="parent-icon">
+              <i class="bx bx-user-circle" style="color:white;"></i>
+            </div>
+            <div class="menu-title" style="color:white;">My Profile</div>
+          </a>
 
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </li>
+        </li>
 
 
             </ul>
@@ -108,7 +108,7 @@
             <ul class="metismenu" id="menu">
                 
                 <li>
-                    <a href="file:///C:/Users/CARLTEC/Desktop/work/hajji/dd/pages/index.html" class="">
+                    <a href="./index.html" class="">
                         <div class="parent-icon">
                             <i class="bx bx-menu" style="color:white;"></i>
                         </div>
@@ -117,7 +117,7 @@
 
                 </li>
                 <li>
-                    <a href="file:///C:/Users/CARLTEC/Desktop/work/hajji/dd/pages/results.html" class="">
+                    <a href="./results.html" class="">
                         <div class="parent-icon">
                             <i class="bx bx-map-alt" style="color:white;"></i>
                         </div>
@@ -126,7 +126,7 @@
 
                 </li>
                 <li>
-                    <a href="file:///C:/Users/CARLTEC/Desktop/work/hajji/dd/pages/fees.html" class="">
+                    <a href="./fees.html" class="">
                         <div class="parent-icon">
                             <i class="bx bx-wallet" style="color:white;"></i>
                         </div>
@@ -135,7 +135,7 @@
 
                 </li>
                 <li>
-                    <a href="file:///C:/Users/CARLTEC/Desktop/work/hajji/dd/pages/my_profile.html" class="">
+                    <a href="./my_profile.html" class="">
                         <div class="parent-icon">
                             <i class="bx bx-user-circle" style="color:white;"></i>
                         </div>
@@ -182,7 +182,7 @@
                             </li>
                             <li>
 
-                                <a class="dropdown-item d-flex align-items-center" href="file:///C:/Users/CARLTEC/Desktop/work/hajji/dd/pages/my_profile.html">
+                                <a class="dropdown-item d-flex align-items-center" href="./my_profile.html">
                                     <i class="bx bx-user fs-5"></i>
                                     <span>Profile</span>
                                 </a>
