--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             
             <ul class="metismenu mm-show" id="menu">
         <li class="mm-active">
-          <a href="./enrollments.html" class="" aria-expanded="true">
+          <a href="./index.html" class="" aria-expanded="true">
             <div class="parent-icon">
               <i class="bx bx-menu" style="color:white;"></i>
             </div>
